--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2022,7 +2022,7 @@ body P {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: var(--bgC_C_T);
+  background: var(--NVC_T);
   border-radius: 1rem;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
