--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -349,7 +349,7 @@ body {
     .header_bubble {
         height: 6rem;
         width: 100%;
-        background: url(../img/backgrounds/basketball-g9fd537503_1920.jpg);
+        background: url(../img/backgrounds/graffitiSmall.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1620,39 +1620,70 @@ body {
 }
 
 .list_btns_container {
-    @include flexDirection(row, space-between, flex-start);
-    background: var(--bgM);
+    @include flexDirection(column, flex-start, center);
+    gap: 1rem;
     width: 100%;
-
-    .list_btn {
-        text-transform: uppercase;
+    .btns_container {
         width: 100%;
-        padding: 0.5rem 3rem;
-        border-radius: 0.25rem;
-        background: none;
-        .label_btn {
-            color: var(--TC);
-            pointer-events: none;
-        }
-
-        &:hover .label_btn {
-            color: var(--whiteOff);
-        }
     }
-    .list_btn:hover,
-    .list_btn:active,
-    .list_btn:focus {
-        color: var(--TC_C);
-        background: linear-gradient(45deg, var(--FC), var(--SC));
-        .icon_svg {
-            fill: var(--TC_C);
-        }
+
+    .portfolio_list_btns_container {
+        @include flexDirection(column, flex-start, center);
+        transition: all 500ms ease;
+        display: none;
+    }
+    .list_down {
+        display: flex;
+    }
+    .list_down > .arrow {
+        transform: rotate(-180deg);
     }
 }
 .sublist_btns_container {
     background: rgba(150, 150, 150, 0.2);
     padding: 1rem;
     width: 100%;
+}
+.list_btn {
+    background: var(--bgM);
+    display: block;
+    text-transform: uppercase;
+    width: 100%;
+    padding: 0.5rem 3rem;
+    border-radius: 0.25rem;
+    background: none;
+    min-width: auto;
+    .label_btn {
+        color: var(--TC);
+        pointer-events: none;
+        line-height: 1;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+        filter: hue-rotate(45deg);
+        .label_btn {
+            color: var(--whiteOff);
+        }
+    }
+}
+.list_btn:hover,
+.list_btn:active,
+.list_btn:focus {
+    color: var(--TC_C);
+    background: linear-gradient(45deg, var(--FC), var(--SC));
+    .icon_svg {
+        fill: var(--TC_C);
+    }
+}
+.search_list_btn {
+    @include flexDirection(row, center, center);
+    .icon_container {
+        display: block;
+        height: 3rem;
+        width: 3rem;
+    }
 }
 .form {
     background: var(--NVC);
