--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1529,6 +1529,21 @@ body P {
   transition: var(--T_M);
 }
 
+.btn_active {
+  background: var(--FC) !important;
+  color: var(--TC_C) !important;
+}
+.btn_active .label_btn {
+  color: var(--TC_C) !important;
+  animation: bounce 2s ease-in-out infinite;
+}
+.btn_active .icon_svg {
+  fill: var(--TC_C) !important;
+}
+.btn_active .icon_svg .cls-1 {
+  fill: var(--TC_C);
+}
+
 /*
 //^ SWIPER LEFT CONTAINER
 .animation_left {
@@ -1548,39 +1563,26 @@ body P {
   color: var(--FC);
 }
 
+.lists_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+}
+
 .list_btns_container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  gap: 1rem;
-  width: 100%;
+  align-items: flex-start;
+  gap: 0.5rem;
+  width: 20rem;
+  min-width: auto;
+  max-width: 100%;
+  flex-wrap: wrap;
 }
-.list_btns_container .btns_container {
-  width: 100%;
-}
-.list_btns_container .portfolio_list_btns_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  transition: all 500ms ease;
-  display: none;
-}
-.list_btns_container .list_down {
-  display: flex;
-}
-.list_btns_container .list_down > .arrow {
-  transform: rotate(-180deg);
-}
-
-.sublist_btns_container {
-  background: rgba(150, 150, 150, 0.2);
-  padding: 1rem;
-  width: 100%;
-}
-
-.list_btn {
+.list_btns_container .list_btn {
   background: var(--bgM);
   display: block;
   text-transform: uppercase;
@@ -1590,40 +1592,79 @@ body P {
   background: none;
   min-width: auto;
 }
-.list_btn .label_btn {
+.list_btns_container .list_btn .label_btn {
   color: var(--TC);
   pointer-events: none;
   line-height: 1;
 }
-.list_btn:hover, .list_btn:active, .list_btn:focus {
+.list_btns_container .list_btn:hover, .list_btns_container .list_btn:active, .list_btns_container .list_btn:focus {
   filter: hue-rotate(45deg);
 }
-.list_btn:hover .label_btn, .list_btn:active .label_btn, .list_btn:focus .label_btn {
+.list_btns_container .list_btn:hover .label_btn, .list_btns_container .list_btn:active .label_btn, .list_btns_container .list_btn:focus .label_btn {
   color: var(--whiteOff);
 }
-
-.list_btn:hover,
-.list_btn:active,
-.list_btn:focus {
+.list_btns_container .list_btn:hover,
+.list_btns_container .list_btn:active,
+.list_btns_container .list_btn:focus {
   color: var(--TC_C);
   background: linear-gradient(45deg, var(--FC), var(--SC));
 }
-.list_btn:hover .icon_svg,
-.list_btn:active .icon_svg,
-.list_btn:focus .icon_svg {
+.list_btns_container .list_btn:hover .icon_svg,
+.list_btns_container .list_btn:active .icon_svg,
+.list_btns_container .list_btn:focus .icon_svg {
   fill: var(--TC_C);
 }
-
-.search_list_btn {
+.list_btns_container .search_list_btn {
+  text-transform: uppercase;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background: none;
+  border-radius: 0;
+  border-bottom: solid 2px var(--FC);
 }
-.search_list_btn .icon_container {
+.list_btns_container .search_list_btn .label_btn {
+  color: var(--TC);
+  pointer-events: none;
+  line-height: 1;
+}
+.list_btns_container .search_list_btn .icon_container {
   display: block;
   height: 3rem;
   width: 3rem;
+}
+.list_btns_container .btns_container {
+  width: 100%;
+}
+.list_btns_container .list_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  transition: all 100ms ease;
+  display: none;
+}
+.list_btns_container .list_down {
+  display: flex;
+}
+.list_btns_container .arrow_list_icon {
+  fill: var(--whiteOff);
+  transform: rotate(-180deg);
+}
+.list_btns_container .arrow_list_icon_active {
+  fill: var(--TC);
+  transform: rotate(0);
+}
+.list_btns_container .list_btn_active {
+  background: linear-gradient(45deg, var(--FC), var(--SC)) !important;
+}
+.list_btns_container .list_btn_active .label_btn {
+  color: var(--whiteOff) !important;
+}
+
+.list_extra_btns_container {
+  width: 100%;
 }
 
 .form {
@@ -2402,28 +2443,6 @@ body P {
 .menu_social_container .social_menu_btn:hover .icon_container .icon_svg .cls-2,
 .menu_social_container .social_menu_btn:hover .icon_container .icon_svg .cls-1 {
   fill: var(--TC_C);
-}
-
-.btn_active {
-  background: var(--FC) !important;
-  color: var(--TC_C) !important;
-}
-.btn_active .label_btn {
-  color: var(--TC_C) !important;
-  animation: bounce 2s ease-in-out infinite;
-}
-.btn_active .icon_svg {
-  fill: var(--TC_C) !important;
-}
-.btn_active .icon_svg .cls-1 {
-  fill: var(--TC_C);
-}
-
-.list_btn_active {
-  background: linear-gradient(45deg, var(--FC), var(--SC)) !important;
-}
-.list_btn_active .label_btn {
-  color: var(--TC_C) !important;
 }
 
 @media screen and (min-width: 750px) {
