--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1108,6 +1108,14 @@ body P {
   display: block;
 }
 
+.separator {
+  display: block;
+  background: var(--FC);
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+}
+
 .btn {
   padding: 1rem 0.5rem;
   background: linear-gradient(45deg, var(--FC), var(--SC));
@@ -1568,7 +1576,25 @@ body P {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
+  flex-wrap: wrap;
   width: 100%;
+}
+
+.description_portfolio {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  height: 5rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 1rem;
+}
+.description_portfolio SPAN {
+  display: block;
+  font-size: var(--fontSizeMClamp);
 }
 
 .list_btns_container {
@@ -1676,6 +1702,10 @@ body P {
   width: 100%;
 }
 
+.cards_portfolio_container {
+  overflow-y: auto;
+}
+
 .modal {
   position: fixed;
   width: 100%;
@@ -1698,7 +1728,7 @@ body P {
   top: 4rem;
   left: 50%;
   width: 90%;
-  max-width: 800px;
+  max-width: 720px;
   height: -moz-fit-content;
   height: fit-content;
   background: var(--NVC);
@@ -1707,6 +1737,7 @@ body P {
   transition: var(--T_M);
   transform: translate(-50%, -50%);
   border-radius: 1rem;
+  max-height: calc(100svh - 8rem);
   overflow: hidden;
 }
 .modal .btn {
@@ -1722,6 +1753,37 @@ body P {
   padding: 1rem 0;
   width: 100%;
 }
+.modal .portfolio_modal {
+  max-width: 1800px;
+}
+.modal .alert_modal .btn_container,
+.modal .legal_modal .btn_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+.modal .alert_modal .modal_info {
+  text-align: center;
+}
+.modal .alert_modal .modal_info .btn_container {
+  padding: 0;
+}
+.modal .legal_modal .modal_info {
+  overflow: auto;
+  scroll-behavior: smooth;
+  padding-right: 1rem;
+}
+.modal .legal_modal .modal_info .more_btn {
+  width: 100%;
+}
+.modal .contact_modal {
+  position: relative;
+}
+.modal .contact_modal .modal_form {
+  width: 100%;
+}
 
 .inner_link_btn {
   text-decoration: underline;
@@ -1729,42 +1791,6 @@ body P {
 }
 .inner_link_btn:visited {
   color: inherit;
-}
-
-.alert_modal .btn_container,
-.legal_modal .btn_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: auto;
-}
-
-.alert_modal .modal_info {
-  text-align: center;
-}
-.alert_modal .modal_info .btn_container {
-  padding: 0;
-}
-
-.legal_modal {
-  max-height: 90vh;
-  overflow: hidden;
-}
-.legal_modal .modal_info {
-  overflow: auto;
-  scroll-behavior: smooth;
-  padding-right: 1rem;
-}
-.legal_modal .modal_info .more_btn {
-  width: 100%;
-}
-
-.contact_modal {
-  position: relative;
-}
-.contact_modal .modal_form {
-  width: 100%;
 }
 
 .sliders_container {
