--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1409,25 +1409,23 @@ body {
 .social_btns_container {
     @include flexDirection(row, space-between, center);
 }
-.card,
-.bullet_card {
-    width: 100%;
-    overflow: hidden;
-}
 .card {
+    width: 100%;
     position: relative;
+    overflow: hidden;
     .bg_card {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 30rem;
-        transform: scale(1);
+        height: 100%;
         transition: var(--T_S);
-        @include flex(center, center);
         z-index: -1;
         IMG {
+            display: block;
             object-position: center;
+            width: auto;
+            height: 100%;
         }
     }
     .info_card {
@@ -1446,38 +1444,6 @@ body {
             color: var(--TC_C);
         }
     }
-}
-.bullet_card {
-    background: var(--NVC);
-    min-height: 15rem;
-    height: auto;
-    border-radius: 1rem;
-}
-.bullets_container,
-.cards_container {
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-bottom: 2rem;
-}
-.cards_container {
-    position: relative;
-}
-.bullets_container {
-    min-height: auto;
-    .bullet_content {
-        padding: 2rem;
-        H1 {
-            margin-bottom: 1rem;
-        }
-    }
-}
-//* &SERVICE CARD - START */
-.bullets_container {
-    margin: 0 auto;
-    gap: 2rem;
 }
 .service_card {
     background: linear-gradient(var(--bgC), transparent, var(--bgC));
@@ -1550,7 +1516,6 @@ body {
         .title {
             width: 100%;
 
-            margin-bottom: 1rem;
             font-size: var(--FS_L);
             color: var(--FC);
             padding: 1rem;
@@ -1579,8 +1544,9 @@ body {
             margin-bottom: 1rem;
         }
         .btn_container {
-            padding-bottom: 2rem;
             width: 100%;
+            padding: 0;
+            margin: 0;
             .btn {
                 width: 100%;
             }
@@ -1635,6 +1601,49 @@ body {
 }
 */
 //!
+
+.cards_container {
+    position: relative;
+    overflow: hidden;
+    display: grid;
+    width: 100%;
+}
+.cards_service_container {
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    min-height: auto;
+}
+.cards_hot_container {
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+}
+.cards_portfolio_container {
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    overflow-y: auto;
+    .project_card {
+        height: 20rem;
+        .info_card {
+            .title {
+                font-size: var(--FS_N);
+            }
+            .subtitle {
+                font-size: var(--FS_S);
+            }
+            .btn_container {
+                margin-top: 0.5rem;
+                .btn {
+                    padding: 0.5rem;
+                    min-height: fit-content;
+                }
+            }
+        }
+        .icons_project_container {
+            .icon_container {
+                height: 3rem;
+                width: 3rem;
+                padding: 0.25rem;
+            }
+        }
+    }
+}
 .accent_text {
     color: var(--FC);
 }
@@ -1751,9 +1760,6 @@ body {
     .btn {
         width: 100%;
     }
-}
-.cards_portfolio_container {
-    overflow-y: auto;
 }
 .modal {
     position: fixed;
@@ -2472,12 +2478,6 @@ body {
     }
 }
 @media screen and (min-width: 750px) {
-    .card {
-        width: 50%;
-    }
-    .bullet_card {
-        width: calc(50% - 2rem);
-    }
     .flex_responsive {
         @include flexDirection(row, center, denter);
     }
@@ -2508,28 +2508,15 @@ body {
     }
 }
 @media screen and (min-width: 1100px) {
-    .card {
-        width: 33.3%;
-    }
-    .bullet_card {
-        width: calc(33.3% - 2rem);
-    }
     /* .skills_containers {
         @include flexDirection(row, center, flex-start);
     } */
 }
 @media screen and (min-width: 1400px) {
-    .card {
-        width: 25%;
-    }
-    .bullet_card {
-        width: calc(25% - 2rem);
-    }
     /* .skills_containers {
         @include flexDirection(row, center, flex-start);
     } */
 }
-
 @media (prefers-reduced-motion) {
 }
 @media screen {
